%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: player_female_controller
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Moving
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Attacking
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Damaged
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: MovementSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Dead
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 3
    m_Name: Attack
    m_StateMachine: {fileID: 110772676}
    m_Mask: {fileID: 101100000, guid: c6545a2573daa49ce8da61f54b4aa831, type: 2}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 1
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 3
    m_Name: Death
    m_StateMachine: {fileID: 110710534}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 1
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 7400008, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: .400000006
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400008, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
    m_Threshold: .5
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400008, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
    m_Threshold: 2
    m_Position: {x: 0, y: 0}
    m_TimeScale: 3
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: MovementSpeed
  m_BlendParameterY: New Float
  m_MinThreshold: 0
  m_MaxThreshold: 2
  m_UseAutomaticThresholds: 0
  m_BlendType: 0
--- !u!206 &20628469
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 7400008, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: .340000004
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400008, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
    m_Threshold: .300000012
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400008, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 3
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: MovementSpeed
  m_BlendParameterY: MovementSpeed
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 0
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110293677}
  m_DstState: {fileID: 110219790}
  m_TransitionDuration: .124999985
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .875
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110100092
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110219790}
  m_DstState: {fileID: 110293677}
  m_TransitionDuration: .189873412
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .810126603
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110120575
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110282952}
  m_DstState: {fileID: 110230098}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .99000001
  - m_ConditionMode: 1
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .680851221
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110127710
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110282952}
  m_DstState: {fileID: 110225460}
  m_TransitionDuration: .192866892
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: MovementSpeed
    m_EventTreshold: 0
    m_ExitTime: .819999993
  - m_ConditionMode: 2
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .819999993
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110134773
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227574}
  m_DstState: {fileID: 110219601}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Dead
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110140088
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110293677}
  m_DstState: {fileID: 110245220}
  m_TransitionDuration: .124999985
  m_TransitionOffset: .0286420863
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .875
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110143594
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110219601}
  m_DstState: {fileID: 110227574}
  m_TransitionDuration: .124999985
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Dead
    m_EventTreshold: 0
    m_ExitTime: .875
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110144856
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245220}
  m_DstState: {fileID: 110219790}
  m_TransitionDuration: .178571358
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .821428657
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110150999
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110261419}
  m_DstState: {fileID: 110219790}
  m_TransitionDuration: .197918147
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .680851221
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110151402
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110230098}
  m_DstState: {fileID: 110282952}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .99000001
  - m_ConditionMode: 1
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .594594717
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110153419
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110225460}
  m_DstState: {fileID: 110230098}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110174879
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245220}
  m_DstState: {fileID: 110293677}
  m_TransitionDuration: .356854051
  m_TransitionOffset: .00466151396
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .641718328
  - m_ConditionMode: 2
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .821428657
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110176916
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110261419}
  m_DstState: {fileID: 110245220}
  m_TransitionDuration: 0
  m_TransitionOffset: .00816648267
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .99000001
  - m_ConditionMode: 1
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .680851221
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110182121
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110261419}
  m_DstState: {fileID: 110293677}
  m_TransitionDuration: .139139757
  m_TransitionOffset: .00503596617
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .860009015
  - m_ConditionMode: 2
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .680851221
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110188276
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245220}
  m_DstState: {fileID: 110261419}
  m_TransitionDuration: 0
  m_TransitionOffset: .00107143796
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .99000001
  - m_ConditionMode: 1
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .594594717
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110195523
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110230098}
  m_DstState: {fileID: 110225460}
  m_TransitionDuration: .635234833
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .363336563
  - m_ConditionMode: 2
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .821428657
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: attack_forward
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -264, y: 48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110219601
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400010, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
  m_ParentStateMachine: {fileID: 110710534}
  m_Position: {x: 36, y: 108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110219790
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: walk_forward
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20628469}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 192, y: -48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110225460
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: None
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110772676}
  m_Position: {x: 60, y: -144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110227574
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: New State
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110710534}
  m_Position: {x: 36, y: 12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110230098
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: attack_stationary_1
  m_Speed: 1.5
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
  m_ParentStateMachine: {fileID: 110772676}
  m_Position: {x: -72, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110245220
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: attack_stationary1
  m_Speed: 1.5
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -96, y: 96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110252820
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20600000}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 252, y: -108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110261419
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: attack_forward2
  m_Speed: 1.5
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 180, y: 96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110282952
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: attack_stationary_2
  m_Speed: 1.5
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
  m_ParentStateMachine: {fileID: 110772676}
  m_Position: {x: 240, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110293677
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400010, guid: faf921a0df631482284de462d1c9e6b2, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -156, y: -48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110293677}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110245220}
  - {fileID: 110219790}
  - {fileID: 110293677}
  - {fileID: 110261419}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110293677}
      second:
      - {fileID: 110100000}
      - {fileID: 110140088}
    data:
      first: {fileID: 110200000}
      second: []
    data:
      first: {fileID: 110245220}
      second:
      - {fileID: 110144856}
      - {fileID: 110174879}
      - {fileID: 110188276}
    data:
      first: {fileID: 110219790}
      second:
      - {fileID: 110100092}
    data:
      first: {fileID: 110261419}
      second:
      - {fileID: 110150999}
      - {fileID: 110182121}
      - {fileID: 110176916}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 36, y: -120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1107 &110710534
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Death
  m_DefaultState: {fileID: 110227574}
  m_States:
  - {fileID: 110219601}
  - {fileID: 110227574}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110227574}
      second:
      - {fileID: 110134773}
    data:
      first: {fileID: 110219601}
      second:
      - {fileID: 110143594}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 48, y: -24, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1107 &110772676
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack
  m_DefaultState: {fileID: 110225460}
  m_States:
  - {fileID: 110225460}
  - {fileID: 110230098}
  - {fileID: 110282952}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110225460}
      second:
      - {fileID: 110153419}
    data:
      first: {fileID: 110230098}
      second:
      - {fileID: 110195523}
      - {fileID: 110151402}
    data:
      first: {fileID: 110282952}
      second:
      - {fileID: 110120575}
      - {fileID: 110127710}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 72, y: -216, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
